doozy_ws_2/log/build_2024-04-25_14-45-00/2_t_dolly_logistics_driver/stderr.log
  File "/home/avinaash/doozy_robotics/doozy_ws_2/install/2_t_dolly_logistics_driver/lib/python3.8/site-packages/2_t_dolly_logistics_driver/latch_unlatch_03.py", line 94
    except serial.serialutil.SerialException as e:
    ^
SyntaxError: invalid syntax

